# sarcasm

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  README.md  configure.ac  install-boehm.sh  run-sarcasm  syndef.scm  txt
include/: Makefile.am  scm.h
include/scm/: arity.h  bytevector.h  control.h  env.h  library.h  pair.h  proc.h  symbols.inc  system.h
lib/: Makefile.am
lib/sarcasm/: Makefile.am  foreign.c  foreign.scm  info.scm  init.scm  process.c  process.scm  readline.c  readline.scm  repl.scm  string.scm  syntax.scm  test.scm
lib/scheme/: Makefile.am  base.scm  case-lambda.scm  char.scm  cxr.scm  eval.scm  file.scm  inexact.scm  lazy.scm  process-context.scm  read.scm  repl.scm  time.scm  write.scm
libsarcasm/: Makefile.am  eval.c  khash.h  library.c  parameter.c  proc.c  scm.c  writer.c
scheme/: list.scm  syntax.scm
src/: Makefile.am  bool.c  bytevector.c  char.c  config.h  context.c  control.c  dict.c  env.c  error.c  eval.c  foreign.c  library.c  main.c  number.c  pair.c  parameter.c  port.c  proc.c  reader.c  record.c  scm.c  scm.h  string.c  symbol.c  syntax.c  system.c  to_str.c  types.c  vector.c  writer.c
src/scm/: bool.h  bytevector.h  char.h  context.h  contract.h  dict.h  env.h  error.h  eval.h  foreign.h  library.h  number.h  pair.h  parameter.h  port.h  proc.h  reader.h  record.h  string.h  symbol.h  symbols.inc  syntax.h  system.h  vector.h  writer.h
test/: Makefile.am  run-tests
tests/: base.scm  r7rs.scm
