nobase_include_HEADERS = scm.h				\
						 scm/error.h		\
						 scm/env.h			\
						 scm/reader.h		\
						 scm/control.h		\
						 scm/port.h			\
						 scm/syntax.h		\
						 scm/proc.h			\
						 scm/bytevector.h	\
						 scm/symbol.h		\
						 scm/library.h		\
						 scm/parameter.h	\
						 scm/bool.h			\
						 scm/record.h		\
						 scm/eval.h			\
						 scm/dict.h			\
						 scm/pair.h			\
						 scm/char.h			\
						 scm/writer.h		\
						 scm/contract.h		\
						 scm/system.h		\
						 scm/number.h		\
						 scm/vector.h		\
						 scm/arity.h		\
						 scm/foreign.h		\
						 scm/string.h

